[package]
name = "untitled"
version = "0.1.0"
authors = ["Rein van der Woerd <reinvanderwoerd@me.com>"]
edition = "2018"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
identifier = "org.reinvdwoerd.test-blah"

[dependencies]
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
